<resources>
    <string name="app_name">DDoSDroid</string>
    <string name="attack_phase_label">Attack phase</string>
    <string name="website_hint">https://www.example.com</string>
    <string name="set_the_target_of_the_attack_label">Set the target of the attack.</string>
    <string name="how_would_you_like_to_gather_your_force_label">How would you like to gather your force?</string>
    <string name="paste_url_label">Paste full url:</string>
    <string name="network_configuration_label">Network configuration</string>
    <string name="ufo_content_description">Ufos attacking a city</string>
    <string name="are_you_ready_label">Are you ready?</string>
    <string name="target_label">Target</string>
    <string name="attack_force_label">Attack force</string>
    <string name="confirm_creation_label">Confirm creation</string>
    <string name="begin_attack_label">Begin the attack</string>
    <string name="attack_list_label">Attack list</string>
    <string name="cloud_hosting_content_description">A cloud hosting image</string>
    <string name="attack_a_website_label">Attack a website</string>
    <string name="join_attack_label">Join an attack</string>
    <string name="contributions_label">Contributions</string>
    <string name="main_item_image_content_description">This image represents a main screen item</string>
    <string name="create_attack_label_subtitle">Set your target and unleash full power!</string>
    <string name="join_attack_label_subtitle">Place your service to strengthen other attacks.</string>
    <string name="joined_attacks_label_subtitle">View all attacks where you are taking part.</string>
    <string name="network_configuration_prefix">Botnet will be created over</string>
    <string name="target_set_to_label">Target set to</string>
    <string name="stop_attack_label">Stop the attack</string>
    <string name="users_joined">Users joined:</string>
    <string name="website_image_content_description">Icon of the website</string>
    <string name="attack_list_toolbar_subtitle_prefix">Total count:</string>
    <string name="items_label">items</string>
    <string name="you_started_this_attack_label">You\'ve started this attack:</string>
    <string name="switch_owner_text_on">Disable</string>
    <string name="switch_owner_text_off">Activate</string>
    <string name="switch_joined_text_on">Leave</string>
    <string name="switch_joined_text_off">Join</string>
    <string name="you_joined_this_attack_label">You\'ve joined this attack:</string>
    <string name="enter_valid_url_label">Please enter a valid url.</string>
    <string name="internet_disconnected_msg">No internet connection!</string>
    <string name="contribute_to_this_attack_label">Join</string>
    <string name="against_label">Against</string>
    <string name="people_joined_this_attack">People joined this atack:</string>
    <string name="attack_date_prefix">Created on</string>
    <string name="server_notification_title">Server up</string>
    <string name="server_notification_small_text">Your device is a server which hosts attacks to websites.</string>
    <string name="server_notification_big_text">Your device is a server which hosts attacks to websites.
        If you wish others to join and strengthen your attacks then current server must be up and running.
        Your device can accept connection requests from other devices.</string>
    <string name="your_attacks_label">Your attacks</string>
    <string name="shutdown_label">Shutdown</string>
    <string name="server_disconnection_msg">You were disconnected with the server.</string>
    <string name="server_connection_msg">Connected to server.</string>
    <string name="connect_to_wifi_label">Connect to wifi</string>
    <string name="server_error_msg">Attack not created due to internal error!</string>
    <string name="attack_published_label">Attack published</string>
    <string name="client_connected_msg">You joined the attack!</string>
    <string name="client_connection_error_msg">There was a connection error, try again!</string>
    <string name="client_disconnected_msg">You were disconnected.</string>
    <string name="already_attacking_label">Already attacking</string>
    <string name="client_notification_title">Joined attacks in progress</string>
    <string name="client_notification_small_text">Your device is taking part at DDOS attacks on specific websites.</string>
    <string name="client_notification_big_text">Your device is taking part at DDOS  (Denial-of-services) attacks on specific websites. Denial of service is typically accomplished by flooding the targeted machine or resource with superfluous requests in an attempt to overfload the system.</string>
    <string name="joined_attacks_label">Joined attacks</string>
    <string name="not_following_attack">You are no longer attacking</string>
    <string name="canceled_attack">You canceled the attack on</string>
    <string name="launch_time_label">Launch Time</string>
    <string name="attack_already_started_label">Attack already started.</string>
    <string name="launch_date_label">Launch Date</string>
    <string name="set_date_label">Define the date.</string>
    <string name="set_time_label">Set the time.</string>
    <string name="havent_assigned_date_label">Assign a date.</string>
    <string name="havent_assigned_time_label">Assign time.</string>
    <string name="invalid_date_time">Date and time already passed!</string>
    <string name="begins_on_prefix">Begins on</string>
    <string name="left_attack_label">Left attack</string>
    <string-array name="network_technologies_titles">
        <item>Internet</item>
        <item>WiFi P2P</item>
        <item>NSD</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="network_technologies_description">
        <item>the Internet.</item>
        <item>WiFi peer to peer.</item>
        <item>Network Service Discovery.</item>
        <item>Bluetooth wireless technology.</item>
    </string-array>
</resources>
