<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Attack_List_Item"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="33dp">

    <TextView
        android:id="@+id/website_textview"
        style="@style/Attack_List_Item_Website"
        app:layout_constraintBottom_toBottomOf="@+id/website_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/website_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="www.sport24.gr" />

    <TextView
        android:id="@+id/number_joined_textview"
        style="@style/Attack_List_Item_Subtitle"
        app:layout_constraintStart_toStartOf="@+id/website_textview"
        app:layout_constraintTop_toBottomOf="@+id/website_textview"
        tools:text="Users joined this attack: 13" />

    <ImageView
        android:id="@+id/website_imageview"
        style="@style/Attack_List_Item_Website_Icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/website_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/attack_activation_switch"
        style="@style/Attack_List_Item_Switch"
        android:textOn="@string/switch_joined_text_on"
        android:textOff="@string/switch_joined_text_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/joined_attack_textview"
        app:layout_constraintTop_toBottomOf="@+id/number_joined_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/joined_attack_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/you_joined_this_attack_label"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/attack_activation_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/attack_activation_switch"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>