<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/target_label"
            style="@style/Header_TextView"
            android:layout_marginTop="24dp"
            android:text="@string/paste_url_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_website"
            style="@style/Website_EditText"
            app:layout_constraintEnd_toEndOf="@+id/target_label"
            app:layout_constraintStart_toStartOf="@+id/target_label"
            app:layout_constraintTop_toBottomOf="@+id/target_label"
            tools:text="SPORT24.GR" />

        <TextView
            android:id="@+id/launch_date_label"
            style="@style/Header_TextView"
            android:layout_marginTop="8dp"
            android:text="@string/launch_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_website_creation_time" />

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:paddingStart="@dimen/double_default_margin"
            android:paddingLeft="@dimen/double_default_margin"
            android:paddingEnd="@dimen/double_default_margin"
            android:paddingRight="@dimen/double_default_margin"
            android:textSize="@dimen/spinner_item_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_date_label"
            android:text="@string/set_date_label" />

        <ImageView
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_launch_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_launch_date"
            app:layout_constraintTop_toTopOf="@+id/tv_launch_date" />


        <TextView
            android:id="@+id/launch_time_label"
            style="@style/Header_TextView"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/launch_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_launch_date" />

        <TextView
            android:id="@+id/tv_launch_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:paddingStart="@dimen/double_default_margin"
            android:paddingLeft="@dimen/double_default_margin"
            android:paddingEnd="@dimen/double_default_margin"
            android:paddingRight="@dimen/double_default_margin"
            android:textSize="@dimen/spinner_item_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_time_label"
            android:text="@string/set_time_label" />

        <ImageView
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_launch_time"
            app:layout_constraintEnd_toEndOf="@+id/date_picker"
            app:layout_constraintStart_toStartOf="@+id/date_picker"
            app:layout_constraintTop_toTopOf="@+id/tv_launch_time" />


        <TextView
            android:id="@+id/network_conf_label"
            style="@style/Header_TextView"
            android:layout_marginTop="8dp"
            android:text="@string/network_configuration_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_launch_time" />

        <TextView
            android:id="@+id/tv_website_creation_time"
            style="@style/Website_Hint"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/set_the_target_of_the_attack_label"
            app:layout_constraintEnd_toEndOf="@+id/ed_website"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_website" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_network_config_hint"
            style="@style/Website_Hint"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/default_margin"
            android:lines="3"
            android:text="@string/how_would_you_like_to_gather_your_force_label"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/network_conf_label" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/Attack_FAB"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_network_config_hint" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
