<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        style="@style/Header_TextView"
        android:layout_marginTop="24dp"
        android:paddingStart="@dimen/default_margin"
        android:paddingLeft="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:text="@string/target_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_website"
        style="@style/Website_TextView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="SPORT24.GR" />

    <TextView
        android:id="@+id/tv_website_hint"
        style="@style/Subtitle_TextView"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="@+id/tv_website"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_website"
        app:layout_constraintTop_toBottomOf="@+id/tv_website"
        tools:text="Created on 14/12/2017." />

    <TextView
        android:id="@+id/textView3"
        style="@style/Header_TextView"
        android:layout_marginTop="32dp"
        android:paddingStart="@dimen/default_margin"
        android:paddingLeft="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:text="@string/attack_force_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_website_hint" />


    <TextView
        android:id="@+id/tv_attack_force_hint"
        style="@style/Subtitle_TextView"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="@+id/tv_attack_force_msg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_attack_force_msg"
        app:layout_constraintTop_toBottomOf="@+id/tv_attack_force_msg"
        tools:text="Need a powerfull botnet for an effective attack." />


    <TextView
        android:id="@+id/tv_attack_force_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:paddingStart="@dimen/double_default_margin"
        android:paddingLeft="@dimen/double_default_margin"
        android:paddingEnd="@dimen/double_default_margin"
        android:paddingRight="@dimen/double_default_margin"
        android:textSize="@dimen/spinner_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="So far none has joined you for this attack." />


    <TextView
        android:id="@+id/textView5"
        style="@style/Header_TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        tools:text="@string/begin_attack_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attack_force_hint" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Attack_FAB"
        tools:src="@drawable/ic_swords"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</android.support.constraint.ConstraintLayout>